news spacing fix

--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -1084,7 +1084,7 @@ hgroup {
   padding-top: 35px;
 
   p {
-    margin: 0 15px;
+    margin: 1.5em 15px;
   }
 }
 
